--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 <body>
 
 <h2>Click the Button</h2>
-<button onclick="showMessage()">Click </button>
+<button onclick="showMessage()">Click Me</button>
 
 <script>
   function showMessage() {
